# UAV_object_tracking

./: README.md  TelloTV_demo_1_0.py  Untitled1.ipynb  stream.py  training.ipynb  working with drone.ipynb
task1_face_detection/: CMakeLists.txt  main.cpp  pacman.sh
